Fixed New Tab action behavior in tab context menu

New Tab action duplicates a tab if "New tab button duplicates a tab"
is checked, however the setting should control only the New Tab Button.
For duplicating tabs there is a separate menu item "Duplicate Current Tab".
As shortcuts are assigned to tab actions, this also fixes shortcuts.

This change restores the action behavior to the state it was in v2.7.2
and also makes it aligned with major browser behavior (Chrome, Firefox).

Along with e64a7acf it fixes the following bug:

FIXED: [ 447394 ] New Tab actions perform a tab duplication instead of opening a fresh tab
BUG: 447394

Discussion: https://invent.kde.org/utilities/krusader/-/merge_requests/99