krusader/panelmanager.h
@@ -106,7 +106,7 @@ public slots:
     Q_SCRIPTABLE void newTabs(const QStringList& urls);
 
     void slotNewTab(const QUrl &url, bool setCurrent = true, int insertIndex = -1);
-    void slotNewTabFromUI();
+    void slotNewTabButton();
     void slotNewTab(int insertIndex = -1);
     void slotDuplicateTab(const QUrl &url, KrPanel *nextTo, int insertIndex = -1);
     void slotDuplicateTabLMB();
